# greenthumb

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.txt  docker-compose.yml
assets/fonts/Carme/: OFL.txt
include/: CommandHandler.h  Environment.h  EnvironmentEvent.h  EventManager.h  Garden.h  ILogger.h  Logger.h  Namegen.h  Scheduler.h  Simulation.h  SimulationControl.h  TaskScheduler.h  Weather.h  button.h  plant.h  sensor.cpp  sensor.h  utils.h
src/: Environment.cpp  EnvironmentEvent.cpp  EventManager.cpp  Garden.cpp  Logger.cpp  Namegen.cpp  Simulation.cpp  SimulationControl.cpp  TaskScheduler.cpp  button.cpp  main.cpp  plant.cpp  sensor.cpp  utils.cpp
